--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
@@ -26,7 +26,8 @@
         android:layout_alignBottom="@+id/tvReplyCount"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
@@ -52,7 +53,6 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Henry Willian"
             tools:visibility="visible" />
 
@@ -75,7 +75,6 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvUserName"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:visibility="visible" />
 
         <ViewStub
@@ -90,11 +89,11 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
+            tools:visibility="visible" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytClickableTextView
             android:id="@+id/messageBody"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
@@ -106,7 +105,6 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Lore ipsum  is the correct text which"
             tools:visibility="visible" />
 
@@ -121,7 +119,6 @@
             android:id="@+id/icFile"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="center"
             android:layout_marginVertical="8dp"
             android:layout_marginStart="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -203,7 +200,8 @@
         android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/tinyTextSize"
         android:visibility="gone"
-        tools:text="34 reply" />
+        tools:text="34 reply"
+        tools:visibility="visible" />
 
     <ViewStub
         android:id="@+id/rvReactions"
