--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp">
 
@@ -31,22 +31,21 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/bodyMaxWidth"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="false"
         android:layout_toEndOf="@+id/avatar"
-        android:background="@drawable/sceyt_bg_inc_message"
-        android:paddingTop="2dp">
+        android:background="@drawable/sceyt_bg_inc_message">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/roboto_medium"
             android:singleLine="true"
+            android:textAlignment="viewStart"
             android:textColor="@color/sceyt_color_accent"
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
@@ -63,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="7dp"
             android:drawableStart="@drawable/sceyt_ic_forward_14"
             android:drawablePadding="5dp"
             android:fontFamily="@font/roboto_medium"
@@ -85,105 +84,94 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvForwarded"
+            app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:visibility="visible" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="@dimen/bodyMaxWidth"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/playPauseButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginVertical="8dp"
-            android:paddingBottom="2dp"
-            app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
-            app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-            app:layout_constraintTop_toBottomOf="@+id/viewReply">
+            android:layout_marginStart="12dp"
+            android:background="@drawable/sceyt_bg_circle"
+            android:padding="12dp"
+            android:scaleType="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewReply"
+            app:srcCompat="@drawable/sceyt_ic_play" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/playPauseButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/sceyt_bg_circle"
-                android:padding="12dp"
-                android:scaleType="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/sceyt_ic_play"
-                app:tint="#FFFFFF" />
+        <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
+            android:id="@+id/loadProgress"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="3dp"
+            android:visibility="gone"
+            app:iconSizeInPercent="70"
+            app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
+            app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
+            app:layout_constraintStart_toStartOf="@+id/playPauseButton"
+            app:layout_constraintTop_toTopOf="@+id/playPauseButton"
+            app:minProgress="2"
+            app:progressColor="@color/sceyt_color_white"
+            app:trackColor="@android:color/transparent"
+            tools:visibility="visible" />
 
-            <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
-                android:id="@+id/loadProgress"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:padding="3dp"
-                android:visibility="gone"
-                app:iconSizeInPercent="70"
-                app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
-                app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
-                app:layout_constraintStart_toStartOf="@+id/playPauseButton"
-                app:layout_constraintTop_toTopOf="@+id/playPauseButton"
-                app:minProgress="2"
-                app:progressColor="@color/sceyt_color_white"
-                app:trackColor="@android:color/transparent" />
+        <com.masoudss.lib.WaveformSeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="12dp"
+            app:layout_constraintBottom_toTopOf="@id/voice_duration"
+            app:layout_constraintEnd_toStartOf="@id/playBackSpeed"
+            app:layout_constraintStart_toEndOf="@id/playPauseButton"
+            app:layout_constraintTop_toTopOf="@id/playPauseButton"
+            app:wave_background_color="#99757D8B"
+            app:wave_corner_radius="2dp"
+            app:wave_gap="1.5dp"
+            app:wave_gravity="center"
+            app:wave_max_progress="100"
+            app:wave_min_height="3dp"
+            app:wave_padding_left="2dp"
+            app:wave_padding_right="2dp"
+            app:wave_progress_color="#990253E3"
+            app:wave_visible_progress="0"
+            app:wave_width="2dp" />
 
-            <com.masoudss.lib.WaveformSeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginHorizontal="12dp"
-                app:layout_constraintBottom_toTopOf="@id/voice_duration"
-                app:layout_constraintEnd_toStartOf="@id/playBackSpeed"
-                app:layout_constraintStart_toEndOf="@id/playPauseButton"
-                app:layout_constraintTop_toTopOf="@id/playPauseButton"
-                app:wave_background_color="#99757D8B"
-                app:wave_corner_radius="2dp"
-                app:wave_gap="1.5dp"
-                app:wave_gravity="center"
-                app:wave_max_progress="100"
-                app:wave_min_height="3dp"
-                app:wave_padding_left="2dp"
-                app:wave_padding_right="2dp"
-                app:wave_progress_color="@color/colorAccent"
-                app:wave_visible_progress="0"
-                app:wave_width="2dp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/playBackSpeed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/sceyt_bg_corners_20"
+            android:backgroundTint="@color/sceyt_color_white"
+            android:gravity="center"
+            android:minWidth="30sp"
+            android:paddingVertical="2dp"
+            android:textColor="@color/sceyt_color_gray_800"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/seekBar"
+            tools:text="1x" />
 
-            <TextView
-                android:id="@+id/playBackSpeed"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/sceyt_bg_corners_20"
-                android:backgroundTint="@color/sceyt_color_white"
-                android:gravity="center"
-                android:minWidth="30sp"
-                android:paddingVertical="2dp"
-                android:textColor="@color/sceyt_color_gray_800"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/seekBar"
-                tools:text="1.5x" />
-
-            <TextView
-                android:id="@+id/voice_duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/sceyt_color_gray_800"
-                android:textSize="11sp"
-                app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
-                app:layout_constraintStart_toEndOf="@id/playPauseButton"
-                tools:text="00:00" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/voice_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:textColor="@color/sceyt_color_gray_800"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
+            app:layout_constraintStart_toEndOf="@id/playPauseButton"
+            tools:text="00:00" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
@@ -193,7 +181,7 @@
             android:layout_marginBottom="5dp"
             android:paddingHorizontal="6dp"
             app:layout_constraintBottom_toBottomOf="@id/layoutDetails"
-            app:layout_constraintEnd_toEndOf="@id/layoutDetails"
+            app:layout_constraintEnd_toEndOf="parent"
             app:sceytDateStatusViewDateTextColor="@color/sceyt_color_gray_400"
             app:sceytDateStatusViewDateTextSize="@dimen/tinyTextSize"
             app:sceytDateStatusViewFirstStatus="false"
