--- a/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
@@ -54,24 +54,24 @@
         android:id="@+id/icMsgBodyStartIcon"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="6dp"
         android:adjustViewBounds="true"
         android:padding=".5dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvMessageBody"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@+id/tvMessageBody"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/imageAttachment"
-        app:layout_constraintStart_toStartOf="@+id/tvName"
-        app:layout_constraintTop_toTopOf="@+id/tvMessageBody" />
+        app:layout_constraintTop_toTopOf="@+id/tvMessageBody"
+        tools:src="@drawable/sceyt_ic_voice" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvMessageBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="3dp"
         android:ellipsize="end"
         android:includeFontPadding="false"
@@ -83,8 +83,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@+id/imageAttachment"
+        app:layout_constraintStart_toEndOf="@+id/icMsgBodyStartIcon"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
+        app:layout_goneMarginStart="8dp"
         tools:text="Waitifor." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
