Added logic to enable/disable click in play/pause button in SceytVideoControllerView.kt.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -61,6 +61,7 @@
         <attr name="sceytVideoControllerPauseIcon" format="reference" />
         <attr name="sceytVideoControllerImage" format="reference" />
         <attr name="sceytVideoControllerCornerSize" format="dimension" />
+        <attr name="sceytVideoControllerEnablePlayPauseClick" format="boolean" />
 
     </declare-styleable>
 
