--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
@@ -122,6 +122,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/messageBody"
             app:sceytVideoControllerCornerSize="18dp"
+            app:sceytVideoControllerEnablePlayPauseClick="false"
             app:sceytVideoControllerPlayPauseSize="@dimen/messageProgressSize"
             tools:layout_height="200dp"
             tools:sceytVideoControllerImage="@tools:sample/backgrounds/scenic" />
