--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
@@ -28,6 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:sceytVideoControllerEnablePlayPauseClick="false"
         app:sceytVideoControllerPlayPauseSize="@dimen/messageProgressSize" />
 
     <androidx.appcompat.widget.AppCompatTextView
