--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
@@ -161,7 +161,8 @@
             app:layout_constraintTop_toTopOf="@id/videoViewController"
             app:minProgress="2"
             app:progressColor="@color/sceyt_color_white"
-            app:trackColor="@android:color/transparent" />
+            app:trackColor="@android:color/transparent"
+            tools:visibility="visible" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
