--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_video_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +9,26 @@
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytToReplyLineView
         android:id="@+id/toReplyLine"
         android:layout_width="10dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_alignTop="@+id/layoutDetails"
         android:layout_alignBottom="@+id/tvReplyCount"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
         android:visibility="gone"
-        app:sceytToReplyLineViewToLeft="true" />
+        app:layout_constraintBottom_toBottomOf="@id/tvReplyCount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/layoutDetails"
+        app:sceytToReplyLineViewToLeft="true"
+        tools:visibility="visible" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/sceyt_bg_out_message">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -157,8 +162,8 @@
         android:id="@+id/rvReactions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutDetails"
-        android:layout_alignStart="@id/layoutDetails"
+        app:layout_constraintStart_toStartOf="@+id/layoutDetails"
+        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
         android:layout_marginTop="-5dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
@@ -166,12 +171,10 @@
         android:paddingTop="4dp"
         android:visibility="gone"
         tools:visibility="visible" />
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvReplyCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rvReactions"
         android:layout_marginEnd="2dp"
         android:layout_toStartOf="@+id/toReplyLine"
         android:includeFontPadding="false"
@@ -179,6 +182,9 @@
         android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/tinyTextSize"
         android:visibility="gone"
-        tools:text="34 reply" />
+        app:layout_constraintEnd_toStartOf="@+id/toReplyLine"
+        app:layout_constraintTop_toBottomOf="@id/rvReactions"
+        tools:text="34 reply"
+        tools:visibility="visible" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
