--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp">
 
-
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
         android:layout_width="@dimen/_28sdp"
@@ -207,20 +206,26 @@
         tools:text="34 reply"
         tools:visibility="visible" />
 
+    <androidx.legacy.widget.Space
+        android:id="@+id/spase"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintStart_toStartOf="@id/layoutDetails" />
+
     <ViewStub
         android:id="@+id/rvReactions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="-5dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/layoutDetails"
-        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintTop_toTopOf="@+id/spase"
         tools:visibility="visible" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
