--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_text_message.xml
@@ -37,9 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:background="@drawable/sceyt_bg_inc_message"
+        android:paddingTop="2dp"
         app:layout_constraintStart_toEndOf="@+id/avatar"
-        app:layout_constraintTop_toTopOf="parent"
-        android:paddingTop="2dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
@@ -159,8 +159,11 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
         app:layout_constraintStart_toStartOf="@id/layoutDetails"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintVertical_bias="0"
+        app:layout_goneMarginTop="5dp"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
