--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -64,6 +64,7 @@
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
@@ -145,8 +146,13 @@
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/layoutDetails"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintVertical_bias="0"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
