--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -10,9 +10,9 @@
         android:id="@+id/avatar"
         android:layout_width="@dimen/_28sdp"
         android:layout_height="@dimen/_28sdp"
-        android:layout_alignTop="@id/layoutDetails"
-        android:layout_marginEnd="8dp"
         android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:sceytAvatarViewTextSize="15sp"
         tools:sceytAvatarViewFullName="a"
         tools:visibility="visible" />
@@ -21,9 +21,10 @@
         android:id="@+id/layoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/avatar"
-        android:background="@drawable/sceyt_bg_inc_message">
+        android:layout_marginStart="8dp"
+        android:background="@drawable/sceyt_bg_inc_message"
+        app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserName"
@@ -78,4 +79,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
