--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
@@ -94,7 +94,8 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+            tools:visibility="visible" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytClickableTextView
             android:id="@+id/messageBody"
@@ -188,8 +189,13 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@id/layoutDetails"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintVertical_bias="0"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
