--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_file_message.xml
@@ -174,8 +174,13 @@
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/layoutDetails"
         app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
+        app:layout_constraintVertical_bias="0"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
