--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
         android:visibility="gone"
-        app:sceytToReplyLineViewToLeft="true" />
+        app:sceytToReplyLineViewToLeft="true"
+        tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
@@ -61,7 +62,8 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
@@ -127,6 +129,11 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintVertical_bias="0"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -141,6 +148,7 @@
         android:textColor="@color/sceyt_color_accent"
         android:textSize="@dimen/tinyTextSize"
         android:visibility="gone"
-        tools:text="34 reply" />
+        tools:text="34 reply"
+        tools:visibility="visible" />
 
 </RelativeLayout>
