--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -26,10 +26,10 @@
         android:id="@+id/layoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/sceyt_bg_out_message"
-        android:paddingTop="2dp">
+        android:paddingTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvForwarded"
@@ -65,7 +65,8 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvForwarded"
-            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
+            tools:visibility="visible" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytClickableTextView
             android:id="@+id/messageBody"
@@ -110,13 +111,18 @@
         android:id="@+id/rvReactions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
         android:layout_marginTop="-5dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:paddingTop="4dp"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/layoutDetails"
+        app:layout_constraintTop_toBottomOf="@+id/layoutDetails"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatTextView
