--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_image_message.xml
@@ -10,7 +10,6 @@
         android:id="@+id/avatar"
         android:layout_width="@dimen/_28sdp"
         android:layout_height="@dimen/_28sdp"
-        android:layout_alignTop="@+id/layoutDetails"
         android:layout_marginEnd="8dp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -187,10 +186,9 @@
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
         android:orientation="horizontal"
-        android:paddingTop="4dp"
         android:visibility="gone"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@id/layoutDetails"
