--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_image_message.xml
@@ -10,9 +10,6 @@
         android:id="@+id/toReplyLine"
         android:layout_width="10dp"
         android:layout_height="0dp"
-        android:layout_alignTop="@+id/layoutDetails"
-        android:layout_alignBottom="@+id/tvReplyCount"
-        android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
         android:visibility="gone"
@@ -26,8 +23,6 @@
         android:id="@+id/layoutDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:background="@drawable/sceyt_bg_out_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -144,10 +139,9 @@
         android:layout_marginTop="-5dp"
         android:layout_marginBottom="2dp"
         android:layout="@layout/sceyt_message_reactions_recycler_view"
-        android:orientation="horizontal"
         android:visibility="gone"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="@+id/tvReplyCount"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/layoutDetails"
@@ -159,9 +153,7 @@
         android:id="@+id/tvReplyCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rvReactions"
         android:layout_marginEnd="2dp"
-        android:layout_toStartOf="@+id/toReplyLine"
         android:includeFontPadding="false"
         android:paddingVertical="4dp"
         android:textColor="@color/sceyt_color_accent"
