--- a/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@id/viewReply"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="12dp">
 
     <View
         android:id="@+id/view"
@@ -86,6 +87,6 @@
         app:layout_constraintStart_toEndOf="@+id/icMsgBodyStartIcon"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         app:layout_goneMarginStart="8dp"
-        tools:text="Waitifor." />
+        tools:text="WaitiforWaitiforWaitif d orWaitiforWaitiforWaitiforWaitiforWaitifor." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
