--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
@@ -25,9 +25,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/sceyt_bg_out_message"
         android:paddingTop="2dp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_max="@dimen/bodyMaxWidth">
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvForwarded"
@@ -94,8 +96,7 @@
             app:layout_constraintBottom_toTopOf="@+id/messageDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/messageBody"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@+id/messageBody" />
 
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytDateStatusView
             android:id="@+id/messageDate"
