--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
@@ -23,7 +23,7 @@
         android:id="@+id/layoutToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#CC000000"
+        android:background="@color/sceyt_media_primary_color"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
